<resources>
    <!-- Appname -->
    <string name="app_name">Lé Møte</string>

    <!-- Hovedskjerm -->
    <string name="opprett_møte">Opprett Møte</string>
    <string name="kontakter">Kontakter</string>
    <string name="møteoversikt">Møteoversikt</string>
    <string name="innstillinger">Innstillinger</string>

    <!-- activity kontakter -->
    <string name="legg_til">Legg til</string>
    <string name="endre">Endre</string>
    <string name="slett">Slett</string>

    <string name="id_kontakt">id</string>
    <string name="navn">Navn</string>
    <string name="brukernavn">Brukernavn</string>
    <string name="telefonnummer">Tlf</string>

    <string name="ny_kontakt">Ny kontakt</string>
    <string name="endre_kontakt">Endre kontakt</string>

    <!-- Generellt -->
    <string name="avslutt">Avslutt</string>
    <string name="ja">Ja</string>
    <string name="fortsett">Fortsett</string>
    <string name="ikke_avslutt">Ikke avslutt</string>

    <!-- activity legg til møte -->
    <string name="type">Type</string>
    <string name="sted">Sted</string>
    <string name="Dato">Dato</string>
    <string name="Tid">Tid</string>
    <string name="nytt_møte">Nytt møte</string>
    <string name="leggtilkontakter">Legg til kontakter</string>
    <string name="endre_møte">Endre møte</string>
    <string name="legg_til_deltagere">Legg til deltagere</string>

    <string name="deltagere">Deltagere</string>


    <!-- Preferences / Innstillinger -->
    <string name="sms_tjenester">SMS-Tjenester</string>
    <string name="påminnelse">Påminnelse på SMS</string>
    <string name="tidspunkt">Tidspunkt for SMS</string>
    <string name="velgMelding">Velg melding for \nperiodisk tjeneste</string>
    <string name="lagre">Lagre melding</string>

    <!--Melding-->
    <string name="notMeldingExtra">Sendes til kontakter med møte idag</string>








</resources>