<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/moter_toolbar"
        app:title="@string/nytt_møte"
        app:titleMarginStart="60dp"
        app:titleTextColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ECE8E8"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/clear_mote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="#ECE8E8"
        android:clickable="true"
        android:focusable="true"
        android:onClick="btnClear"
        app:layout_constraintBottom_toBottomOf="@id/moter_toolbar"
        app:layout_constraintStart_toStartOf="@id/moter_toolbar"
        app:layout_constraintTop_toTopOf="@+id/moter_toolbar"
        app:srcCompat="@drawable/ic_baseline_clear_24" />

    <ImageButton
        android:id="@+id/done_mote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="#ECE8E8"
        android:clickable="true"
        android:focusable="true"
        android:onClick="btnLeggTil"
        app:layout_constraintBottom_toBottomOf="@+id/moter_toolbar"
        app:layout_constraintEnd_toEndOf="@id/moter_toolbar"
        app:layout_constraintTop_toTopOf="@+id/moter_toolbar"
        app:srcCompat="@drawable/ic_baseline_done_24" />

    <ImageView
        android:id="@+id/type_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/text_sted"
        app:layout_constraintEnd_toStartOf="@+id/text_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moter_toolbar"
        app:srcCompat="@drawable/ic_baseline_title_24" />

    <EditText
        android:id="@+id/text_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/type"
        app:layout_constraintBottom_toTopOf="@id/text_sted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moter_toolbar" />

        <ImageView
        android:id="@+id/sted_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/text_dato"
        app:layout_constraintEnd_toStartOf="@+id/text_sted"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_type"
        app:srcCompat="@drawable/ic_baseline_place_24" />

    <EditText
        android:id="@+id/text_sted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/sted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_dato"
        app:layout_constraintTop_toBottomOf="@+id/text_type" />

    <ImageButton
        android:id="@+id/date_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:onClick="btnDatoDialog"
        app:layout_constraintBottom_toTopOf="@id/text_tid"
        app:layout_constraintEnd_toStartOf="@+id/text_dato"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_sted"
        app:srcCompat="@drawable/ic_baseline_date_range_24" />

    <EditText
        android:id="@+id/text_dato"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/Dato"
        android:inputType="none"
        android:onClick="btnDatoDialog"
        app:layout_constraintBottom_toTopOf="@id/text_tid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/date_icon"
        app:layout_constraintTop_toBottomOf="@+id/text_sted" />


    <ImageButton
        android:id="@+id/tid_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:onClick="btnTimeDialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_tid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dato"
        app:srcCompat="@drawable/ic_baseline_access_time_24" />
    <!-- <ImageView
        android:id="@+id/tid_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_tid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dato"
        app:srcCompat="@drawable/ic_baseline_access_time_24" /> -->

    <EditText
        android:id="@+id/text_tid"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/Tid"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tid_icon"
        app:layout_constraintTop_toBottomOf="@+id/text_dato" />



</androidx.constraintlayout.widget.ConstraintLayout>